--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -5,7 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@400;700&family=Baloo+Bhaina+2:wght@400;700&family=Yantramanav:wght@400;700&family=Cambay:wght@400;700&family=Khula:wght@400;700&family=Martel:wght@400;700&family=Sarala:wght@400;700&family=Yatra+One&family=Biryani:wght@400;700&family=Sahitya:wght@400;700&family=Amita:wght@400;700&family=Eczar:wght@400;700&family=Halant:wght@400;700&family=Laila:wght@400;700&display=swap');
 
 /* Import Additional Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&family=Modak&family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&family=Modak&family=Patua+One&family=Sura:wght@400;700&family=Noto+Sans+Kaithi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arya:wght@400;700&family=Ranga:wght@400;700&family=Dekko&family=Asar&family=Srikhand&family=Khand:wght@400;700&family=Pragati+Narrow:wght@400;700&family=Tillana:wght@400;700&family=Jaldi:wght@400;700&family=Kurale&family=Sumana:wght@400;700&family=Vesper+Libre:wght@400;700&family=Kadwa:wght@400;700&family=Rhodium+Libre&family=Glegoo:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;700&family=Jaini&family=Jaini+Purva&family=Palanquin:wght@400;700&family=Palanquin+Dark:wght@400;700&family=Noto+Serif+Devanagari:wght@400;700&family=Tiro+Devanagari+Sanskrit&family=Tiro+Devanagari+Marathi&family=Annapurna+SIL:wght@400;700&family=Akshar:wght@300;400;500;600;700&family=Amiko:wght@400;600;700&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
 
 /* Stylish Fonts */
 .font-style[data-category="stylish"] {
@@ -31,7 +33,7 @@
 
 /* Decorative Fonts */
 .style-shadow {
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .style-outline {
@@ -41,17 +43,17 @@
 
 .style-3d {
     text-shadow: 0 1px 0 #ccc,
-                 0 2px 0 #c9c9c9,
-                 0 3px 0 #bbb,
-                 0 4px 0 #b9b9b9,
-                 0 5px 0 #aaa,
-                 0 6px 1px rgba(0,0,0,.1),
-                 0 0 5px rgba(0,0,0,.1),
-                 0 1px 3px rgba(0,0,0,.3),
-                 0 3px 5px rgba(0,0,0,.2),
-                 0 5px 10px rgba(0,0,0,.25),
-                 0 10px 10px rgba(0,0,0,.2),
-                 0 20px 20px rgba(0,0,0,.15);
+        0 2px 0 #c9c9c9,
+        0 3px 0 #bbb,
+        0 4px 0 #b9b9b9,
+        0 5px 0 #aaa,
+        0 6px 1px rgba(0, 0, 0, .1),
+        0 0 5px rgba(0, 0, 0, .1),
+        0 1px 3px rgba(0, 0, 0, .3),
+        0 3px 5px rgba(0, 0, 0, .2),
+        0 5px 10px rgba(0, 0, 0, .25),
+        0 10px 10px rgba(0, 0, 0, .2),
+        0 20px 20px rgba(0, 0, 0, .15);
 }
 
 /* Symbol Styles */
